fix: fixed profile text container overflowing

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -1,4 +1,6 @@
 .profile__about {
+    max-width: 400px;
+    overflow-wrap: break-word;
     margin: 16px 0 0;
     font-style: normal;
     font-weight: 400;
@@ -8,7 +10,7 @@
 
 @media screen and (max-width:767px) {
     .profile__about{
-        font-weight: 400;
+        max-width: 282px;
         font-size: 14px;
         line-height: 17px;
         text-align: center;
