--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     margin-top: 40px;
-    max-height: 120px;
 }
 
 @media screen and (max-width: 767px) {
